nothing is linking help

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Kacaang</title>
+
+    <link rel="stylesheet" href="/css/test.css">
 </head>
 
 <body>
@@ -13,6 +15,10 @@
         <!-- above navbar -->
         <div class="above-nav">
             test
+        </div>
+
+        <!-- logo bar -->
+        <div class="logo-bar">
             test
         </div>
 
