header & footer content in

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Home - Kacaang</title>
 
     <link rel="stylesheet" href="/css/test.css">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Paytone+One&family=Titan+One&display=swap" rel="stylesheet">
+
+    <!-- awesome fonts -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
 <body>
@@ -38,6 +48,65 @@
                 </ul>
             </div>
         </nav>
+    </header>
+
+    <!-- footer -->
+
+    <footer>
+        <div class="footer-grid">
+            
+            <!-- Logo -->
+            <div class="logo-col">
+                <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+            </div>
+
+            <!-- Shop Links -->
+            <div class="shop-links-col">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="shop.html">SHOP</a></li>
+                    <li><a class="footer-link" href="shop.html">SALES</a></li>
+                    <li><a class="footer-link" href="corporate.html">OCCASIONS</a></li>
+                    <li><a class="footer-link" href="corporate.html">CORPORATE</a></li>
+                    <li><a class="footer-link" href="faqs.html">FAQS</a></li>
+                </ul>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="support-links-col">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="about-us.html">OUR STORY</a></li>
+                    <li><a class="footer-link" href="#">OUR FARM</a></li>
+                    <li><a class="footer-link" href="#">CASHEW CRAZE CLUB</a></li>
+                    <li><a class="footer-link" href="#">CONTACT US</a></li>
+                </ul>
+                <br>
+                <div class="footer-socials">
+                    <i class="fa-brands fa-tiktok"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-telegram"></i>
+                </div>
+            </div>
+
+
+            <!-- Quick Links -->
+            <div class="quick-links-col">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="#">PRIVACY POLICY</a></li>
+                    <li><a class="footer-link" href="#">TERMS & CONDITIONS</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- copyright -->
+        <div class="copyright">
+            <p class="copyright">Copyright &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+        </div>
+    </footer>
+
+    <div class="below-footer">
+        test
+    </div>
 </body>
 
 </html>
