changed all to caps

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="navbar-top">
                 <a href="index.html"><img class="Kacaang-logo" src="images/logo.png" alt="Kacaang Logo"></a>
                 <ul class="navbar-list hover-underline">
-                    <li><a class="navbar-link active" href="about-us.html">About Us</a></li>
-                    <li><a class="navbar-link" href="shop.html">Shop</a></li>
-                    <li><a class="navbar-link" href="locate-us.html">Locate Us</a></li>
-                    <li><a class="navbar-link" href="contact-us.html">Contact Us</a></li>
-                    <li><a class="navbar-link" href="faqs.html">FAQs</a></li>
-                    <li><a class="navbar-link" href="reviews.html">Reviews</a></li>
+                    <li><a class="navbar-link active" href="about-us.html">ABOUT US</a></li>
+                    <li><a class="navbar-link" href="shop.html">SHOP</a></li>
+                    <li><a class="navbar-link" href="locate-us.html">LOCATE US</a></li>
+                    <li><a class="navbar-link" href="contact-us.html">CONTACT US</a></li>
+                    <li><a class="navbar-link" href="faqs.html">FAQS</a></li>
+                    <li><a class="navbar-link" href="reviews.html">REVIEWS</a></li>
                     <li><a href="account.html"><img src="/images/account.svg" alt="Account Icon"></a></li>
                     <li><a href="cart.html"><img src="/images/cart.svg" alt="Cart Icon"></a></li>
                 </ul>
@@ -100,7 +100,7 @@
 
         <!-- copyright -->
         <div class="copyright">
-            <p class="copyright">Copyright &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+            <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
         </div>
     </footer>
 
