linked to css & images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Kacaang</title>
 
-    <link rel="stylesheet" href="/css/test.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
