the header & footer is taking shape

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Paytone+One&family=Titan+One&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Paytone+One&family=Titan+One&display=swap"
+        rel="stylesheet">
 
     <!-- awesome fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -24,29 +26,25 @@
     <header>
         <!-- above navbar -->
         <div class="above-nav">
-            test
         </div>
 
         <!-- logo bar -->
         <div class="logo-bar">
-            test
+            <a href="index.html"><img class="Kacaang-logo" src="images/logo.png" alt="Kacaang Logo"></a>
         </div>
 
         <!-- navbar -->
         <nav class="navbar">
-            <div class="navbar-top">
-                <a href="index.html"><img class="Kacaang-logo" src="images/logo.png" alt="Kacaang Logo"></a>
-                <ul class="navbar-list hover-underline">
-                    <li><a class="navbar-link active" href="about-us.html">ABOUT US</a></li>
-                    <li><a class="navbar-link" href="shop.html">SHOP</a></li>
-                    <li><a class="navbar-link" href="locate-us.html">LOCATE US</a></li>
-                    <li><a class="navbar-link" href="contact-us.html">CONTACT US</a></li>
-                    <li><a class="navbar-link" href="faqs.html">FAQS</a></li>
-                    <li><a class="navbar-link" href="reviews.html">REVIEWS</a></li>
-                    <li><a href="account.html"><img src="/images/account.svg" alt="Account Icon"></a></li>
-                    <li><a href="cart.html"><img src="/images/cart.svg" alt="Cart Icon"></a></li>
-                </ul>
-            </div>
+            <ul class="navbar-list hover-underline">
+                <li><a class="navbar-link active" href="about-us.html">ABOUT US</a></li>
+                <li><a class="navbar-link" href="shop.html">SHOP</a></li>
+                <li><a class="navbar-link" href="locate-us.html">LOCATE US</a></li>
+                <li><a class="navbar-link" href="contact-us.html">CONTACT US</a></li>
+                <li><a class="navbar-link" href="faqs.html">FAQS</a></li>
+                <li><a class="navbar-link" href="reviews.html">REVIEWS</a></li>
+                <li><a class = "navbar-icon" href="account.html"><img src="images/account.svg" alt="Account Icon"></a></li>
+                <li><a class = "navbar-icon" href="cart.html"><img src="images/cart.svg" alt="Cart Icon"></a></li>
+            </ul>
         </nav>
     </header>
 
@@ -54,7 +52,7 @@
 
     <footer>
         <div class="footer-grid">
-            
+
             <!-- Logo -->
             <div class="logo-col">
                 <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
@@ -78,14 +76,13 @@
                     <li><a class="footer-link" href="#">OUR FARM</a></li>
                     <li><a class="footer-link" href="#">CASHEW CRAZE CLUB</a></li>
                     <li><a class="footer-link" href="#">CONTACT US</a></li>
+                    <div class="footer-socials">
+                        <i class="fa-brands fa-tiktok"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-telegram"></i>
+                    </div>
                 </ul>
-                <br>
-                <div class="footer-socials">
-                    <i class="fa-brands fa-tiktok"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-telegram"></i>
-                </div>
             </div>
 
 
