--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Kacaang</title>
+    
+    <!--Bootstrap-->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script> -->
 
     <link rel="stylesheet" href="css/index.css">
 
@@ -19,6 +26,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
 
 <body>
@@ -34,7 +42,7 @@
         </div>
 
         <!-- navbar -->
-        <nav class="navbar">
+        <!-- <nav class="navbar">
             <ul class="navbar-list hover-underline">
                 <li><a class="navbar-link active" href="about-us.html">ABOUT US</a></li>
                 <li><a class="navbar-link" href="shop.html">SHOP</a></li>
@@ -42,10 +50,38 @@
                 <li><a class="navbar-link" href="contact-us.html">CONTACT US</a></li>
                 <li><a class="navbar-link" href="faqs.html">FAQS</a></li>
                 <li><a class="navbar-link" href="reviews.html">REVIEWS</a></li>
-                <li><a class = "navbar-icon" href="account.html"><img src="images/account.svg" alt="Account Icon"></a></li>
-                <li><a class = "navbar-icon" href="cart.html"><img src="images/cart.svg" alt="Cart Icon"></a></li>
+                <div class="navbar-icons">
+                    <li><a class="nav-icon" href="account.html"><img src="images/account.svg" alt="Account Icon"></a>
+                    </li>
+                    <li><a class="nav-icon" href="cart.html"><img src="images/cart.svg" alt="Cart Icon"></a></li>
+                </div>
             </ul>
-        </nav>
+        </nav> -->
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="shop.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    SHOP
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">ALL PRODUCTS</a>
+                    <a class="dropdown-item" href="#">ON SALE</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">CORPORATE</a>
+                    <a class="dropdown-item" href="#">OCCASIONS</a>
+                  </div>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="locate-us.html">LOCATE US</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                <li class="nav-item"><a class="nav-link" href="faqs.html">FAQS</a></li>
+                <li class="nav-item"><a class="nav-link" href="reviews.html">REVIEWS</a></li>
+              </ul>
+            </div>
+          </nav>
+
     </header>
 
     <!-- footer -->
@@ -102,7 +138,6 @@
     </footer>
 
     <div class="below-footer">
-        test
     </div>
 </body>
 
