--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Home - Kacaang</title>
     
     <!--Bootstrap-->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script> -->
+    crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/index.css">
 
@@ -58,18 +58,17 @@
             </ul>
         </nav> -->
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="shop.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     SHOP
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">ALL PRODUCTS</a>
                     <a class="dropdown-item" href="#">ON SALE</a>
-                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">CORPORATE</a>
                     <a class="dropdown-item" href="#">OCCASIONS</a>
                   </div>
@@ -78,6 +77,11 @@
                 <li class="nav-item"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
                 <li class="nav-item"><a class="nav-link" href="faqs.html">FAQS</a></li>
                 <li class="nav-item"><a class="nav-link" href="reviews.html">REVIEWS</a></li>
+                <div class="navbar-icons">
+                    <li><a class="nav-icon" href="account.html"><img src="images/account.svg" alt="Account Icon"></a>
+                    </li>
+                    <li><a class="nav-icon" href="cart.html"><img src="images/cart.svg" alt="Cart Icon"></a></li>
+                </div>
               </ul>
             </div>
           </nav>
