--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Kacaang</title>
-    
+
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script> -->
 
+    <!-- stylesheet -->
     <link rel="stylesheet" href="css/index.css">
 
     <!-- google fonts -->
@@ -26,7 +33,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
 </head>
 
 <body>
@@ -42,49 +49,49 @@
         </div>
 
         <!-- navbar -->
-        <!-- <nav class="navbar">
-            <ul class="navbar-list hover-underline">
-                <li><a class="navbar-link active" href="about-us.html">ABOUT US</a></li>
-                <li><a class="navbar-link" href="shop.html">SHOP</a></li>
-                <li><a class="navbar-link" href="locate-us.html">LOCATE US</a></li>
-                <li><a class="navbar-link" href="contact-us.html">CONTACT US</a></li>
-                <li><a class="navbar-link" href="faqs.html">FAQS</a></li>
-                <li><a class="navbar-link" href="reviews.html">REVIEWS</a></li>
-                <div class="navbar-icons">
-                    <li><a class="nav-icon" href="account.html"><img src="images/account.svg" alt="Account Icon"></a>
-                    </li>
-                    <li><a class="nav-icon" href="cart.html"><img src="images/cart.svg" alt="Cart Icon"></a></li>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse nav-spread" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">ABOUT US</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <button class="btn dropdown-toggle nav-link" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                SHOP
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item nav-link" href="#">ALL PRODUCTS</a></li>
+                                <li><a class="dropdown-item nav-link" href="#">ON SALE</a></li>
+                                <li><a class="dropdown-item nav-link" href="#">CORPORATE/OCCASION</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">LOCATE US</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">CONTACT US</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">FAQS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">REVIEWS</a>
+                        </li>
+                    </ul>
+                    <div class="nav-icons-list nav-link">
+                        <a class="nav-icon"><img src="images/account.svg" alt="Account Icon"></a>
+                        <a class="nav-icon"><img src="images/cart.svg" alt="Account Icon"></a>
+                    </div>
                 </div>
-            </ul>
-        </nav> -->
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    SHOP
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">ALL PRODUCTS</a>
-                    <a class="dropdown-item" href="#">ON SALE</a>
-                    <a class="dropdown-item" href="#">CORPORATE</a>
-                    <a class="dropdown-item" href="#">OCCASIONS</a>
-                  </div>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="locate-us.html">LOCATE US</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
-                <li class="nav-item"><a class="nav-link" href="faqs.html">FAQS</a></li>
-                <li class="nav-item"><a class="nav-link" href="reviews.html">REVIEWS</a></li>
-                <div class="navbar-icons">
-                    <li><a class="nav-icon" href="account.html"><img src="images/account.svg" alt="Account Icon"></a>
-                    </li>
-                    <li><a class="nav-icon" href="cart.html"><img src="images/cart.svg" alt="Cart Icon"></a></li>
-                </div>
-              </ul>
             </div>
-          </nav>
+        </nav>
 
     </header>
 
