--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>SHOP - KACAANG </title>
+    <title>Shop - KACAANG </title>
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -48,7 +48,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/black-pepper-cashews.png" class="shop-product-img">
             <h4> Black Pepper Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -72,7 +72,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/chocolate-cashews.png" class="shop-product-img">
             <h4> Chocolate Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -84,7 +84,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/laksa-cashews.png" class="shop-product-img">
             <h4> Laksa Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -96,7 +96,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/biscoff-cashews.png" class="shop-product-img">
             <h4> Lotus Biscoff Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -108,7 +108,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/mala-cashews.png" class="shop-product-img">
             <h4> Mala Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -120,8 +120,8 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Roasted Cashews</h4>
+            <img src="images/salt-cashews.png" class="shop-product-img">
+            <h4> Salt-roasted Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
             </div>
@@ -132,7 +132,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/salted-egg-cheese-cashews.png" class="shop-product-img">
             <h4> Salted Egg and Cheese Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -144,7 +144,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/smoky-bbq-cashews.png" class="shop-product-img">
             <h4> Smoky BBQ Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -198,7 +198,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/mala-cashews.png" class="shop-product-img">
             <h4>  Mala Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -227,7 +227,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/laksa-cashews.png" class="shop-product-img">
             <h4>  Laksa Cashews </h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -239,7 +239,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/biscoff-cashews.png" class="shop-product-img">
             <h4> Lotus Biscoff Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -251,7 +251,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/mala-cashews.png" class="shop-product-img">
             <h4> Mala Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -280,7 +280,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/biscoff-cashews.png" class="shop-product-img">
             <h4> Lotus Biscoff Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -292,7 +292,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/salted-egg-cheese-cashews.png" class="shop-product-img">
             <h4> Salted Egg and Cheese Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -309,7 +309,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/chocolate-cashews.png" class="shop-product-img">
             <h4>  Chocolate Cashews </h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -321,8 +321,8 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
-            <h4> Roasted Cashews</h4>
+            <img src="images/salt-cashews.png" class="shop-product-img">
+            <h4> Salt-roasted Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
             </div>
@@ -333,7 +333,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/smoky-bbq-cashews.png" class="shop-product-img">
             <h4> Smoky BBQ Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -362,7 +362,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/laksa-cashews.png" class="shop-product-img">
             <h4> Laksa Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -374,7 +374,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/mala-cashews.png" class="shop-product-img">
             <h4> Mala Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
@@ -386,7 +386,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/salted-egg-cheese-cashews.png" class="shop-product-img">
             <h4> Salted Egg and Cheese Cashews</h4>
             <div class="shop-review-line">
               <p><img src="images/stars.png" alt="" height="12"> 1 review</p>
