--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
                 <td>
                   <div class="d-flex align-items-center">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
-                    <p style="padding: 20px 10px 0 10px;">1</p>
+                    <p style="padding: 0 20px;">1</p>
                     <span class="material-symbols-outlined">add_circle</span>
                   </div>
                 </td>
@@ -99,7 +99,7 @@
                 <td>
                   <div class="d-flex align-items-center">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
-                    <p style="padding: 20px 10px 0 10px;">2</p>
+                    <p style="padding: 0 20px;">2</p>
                     <span class="material-symbols-outlined">add_circle</span>
                   </div>
                 </td>
@@ -121,7 +121,7 @@
                 <td>
                   <div class="d-flex align-items-center">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
-                    <p style="padding: 20px 10px 0 10px;">1</p>
+                    <p style="padding: 0 20px;">1</p>
                     <span class="material-symbols-outlined">add_circle</span>
                   </div>
                 </td>
@@ -148,7 +148,7 @@
                   Order Instructions <br>
                   <textarea></textarea>
                   <p class="p-12px">Taxes and shipping calculated at next step.</p>
-                  <button class="actionbutton">Check out</button>
+                  <button class="actionbutton-100">Check out</button>
                   <p class="p-12px-center">By clicking Check out, you agree to our <br> Terms & Conditions.</p>
                 </td>
               </tr>
