minor adjustments to account.html style

--- a/account.html
+++ b/account.html
@@ -56,9 +56,9 @@
                     <div class="accountcontainer">
                         <img src="images/profile.png">
                         <div class="flex-column ms-4">
-                            <p class="mb-4">Lica</p>
-                            <p class="mb-4 p-color">licaloveskacaang@email.com</p>
-                            <p class="mb-4 p-24px">
+                            <p class="mb-2">Lica</p>
+                            <p class="mb-2 p-color">licaloveskacaang@email.com</p>
+                            <p class="mb-2 p-24px">
                                 <span class="p-36px">150</span>
                                 <img src="images/membership.png">
                                 Points
@@ -89,7 +89,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <p class="p-20-px-color-orange">NAME</p>
-                            <p class="p-color-orange">Lica</p>
+                            <p class="p-color-orange-margin-bottom">Lica</p>
                             <p class="p-20-px-color-orange">EMAIL</p>
                             <p class="p-color-orange">licaloveskacaang@email.com</p>
                         </div>
