cart + standard fonts for faqs.html

--- a/account.html
+++ b/account.html
@@ -45,7 +45,7 @@
 
         <!--banner-->
         <div class="main-container">
-            <div id="bannertext">account</div>
+            <h1>account</h1>
         </div>
         <!--end banner-->
 
@@ -56,9 +56,9 @@
                     <div class="accountcontainer">
                         <img src="images/profile.png">
                         <div class="flex-column ms-4">
-                            <p class="mb-2">Lica</p>
-                            <p class="mb-2 p-color">licaloveskacaang@email.com</p>
-                            <p class="mb-2 p-24px">
+                            <h6 class="mb-2">Lica</p>
+                            <h6 class="mb-2 p-color">licaloveskacaang@email.com</p>
+                            <h6 class="mb-2 p-24px">
                                 <span class="p-36px">150</span>
                                 <img src="images/membership.png">
                                 Points
@@ -127,28 +127,28 @@
                 <div class="acctrect">
                     <div class="row">
                         <div class="col-md-3 aligncenter">
-                            <img class="imgacct" src="images/chilli-crab-cashews.png">
+                            <img class="imgacct" src="images/free-delivery.png">
                             <p class="p-color-orange">Free Delivery</p>
                             <p class="p-12-px-color-orange">150 points</p>
-                            <button class="actionbutton-neutral">Redeem</button>
+                            <button class="actionbutton-smaller">Redeem</button>
                         </div>
                         <div class="col-md-3 aligncenter">
-                            <img class="imgacct" src="images/chilli-crab-cashews.png">
+                            <img class="imgacct" src="images/two-dollars-off.png">
                             <p class="p-color-orange">$2 OFF next order</p>
                             <p class="p-12-px-color-orange">350 points</p>
-                            <button class="actionbutton-smaller">More points needed</button>
+                            <button class="actionbutton-neutral">More points needed</button>
                         </div>
                         <div class="col-md-3 aligncenter">
-                            <img class="imgacct" src="images/chilli-crab-cashews.png">
+                            <img class="imgacct" src="images/five-dollars-off.png">
                             <p class="p-color-orange">$5 OFF next order</p>
                             <p class="p-12-px-color-orange">600 points</p>
-                            <button class="actionbutton-smaller">More points needed</button>
+                            <button class="actionbutton-neutral">More points needed</button>
                         </div>
                         <div class="col-md-3 aligncenter">
-                            <img class="imgacct" src="images/chilli-crab-cashews.png">
+                            <img class="imgacct" src="images/ten-dollars-off.png">
                             <p class="p-color-orange">$10 OFF next order</p>
                             <p class="p-12-px-color-orange">1000 points</p>
-                            <button class="actionbutton-smaller">More points needed</button>
+                            <button class="actionbutton-neutral">More points needed</button>
                         </div>
                     </div>
                 </div>
