--- a/cart.html
+++ b/cart.html
@@ -46,9 +46,9 @@
 
     <!--banner-->
     <div class="main-container">
-      <div id="bannertext">checkout</div>
-    </div>
-    <!--end banner-->
+      <h1>checkout</h1>
+  </div>
+  <!--end banner-->
 
     <!--content-->
     <div class="container">
@@ -69,7 +69,7 @@
                     <img src="images/chilli-crab-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
                     <div class="flex-column ms-4">
                       <p class="mb-4">$4.50</p>
-                      <p class="mb-4">Spicy Seafood Cashew Nuts</p>
+                      <p class="mb-4">Chilli Crab Cashew Nuts</p>
                       <p class="mb-0">Size: 80g</p>
                     </div>
                   </div>
@@ -88,10 +88,10 @@
               <tr>
                 <td>
                   <div class="d-flex align-items-center">
-                    <img src="images/chilli-crab-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
+                    <img src="images/biscoff-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
                     <div class="flex-column ms-4">
                       <p class="mb-4">$4.50</p>
-                      <p class="mb-4">Caramel Cashew Nuts</p>
+                      <p class="mb-4">Biscoff Cashew Nuts</p>
                       <p class="mb-0">Size: 80g</p>
                     </div>
                   </div>
@@ -110,7 +110,7 @@
               <tr>
                 <td>
                   <div class="d-flex align-items-center">
-                    <img src="images/chilli-crab-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
+                    <img src="images/salted-egg-and-cheese-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
                     <div class="flex-column ms-4">
                       <p class="mb-4">$4.50</p>
                       <p class="mb-4">Salted Egg Yolk and Cheese <br> Cashew Nuts</p>
