faq edited .tab button

--- a/faqs.html
+++ b/faqs.html
@@ -53,9 +53,9 @@
 
         <!-- tab buttons -->
         <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'product')" id="defaultOpen"><h4>Product</h4></button>
-            <button class="tablinks" onclick="openTab(event, 'loyalty')"><h4>Loyalty</h4></button>
-            <button class="tablinks" onclick="openTab(event, 'general')"><h4>General</h4></button>
+            <button class="tablinks" onclick="openTab(event, 'product')" id="defaultOpen">Product</button>
+            <button class="tablinks" onclick="openTab(event, 'loyalty')">Loyalty</button>
+            <button class="tablinks" onclick="openTab(event, 'general')">General</button>
         </div>
         <!-- tab contents -->
         <!-- product tab -->
