--- a/account.html
+++ b/account.html
@@ -56,14 +56,14 @@
                     <div class="accountcontainer">
                         <img src="images/profile.png">
                         <div class="flex-column ms-4">
-                            <h6 class="mb-2">Lica</p>
-                            <h6 class="mb-2 p-color">licaloveskacaang@email.com</p>
-                            <h6 class="mb-2 p-24px">
-                                <span class="p-36px">150</span>
+                            <h6 class="mb-2">Lica</h6>
+                            <h6 class="mb-2 light-brown-font">licaloveskacaang@email.com</h6>
+                            <h3 class="mb-2">
+                                150
                                 <img src="images/membership.png">
-                                Points
-                            </p>
-                            <p class="mb-0 p-color">Referral code: KAC928HB28</p>
+                                <span class="h5">Points</span>
+                            </h3>
+                            <h6 class="mb-0 light-brown-font">Referral code: KAC928HB28</h6>
                         </div>
                     </div>
                 </div>
@@ -88,19 +88,19 @@
                 <div class="acctrect-left">
                     <div class="row">
                         <div class="col-md-6">
-                            <p class="p-20-px-color-orange">NAME</p>
-                            <p class="p-color-orange-margin-bottom">Lica</p>
-                            <p class="p-20-px-color-orange">EMAIL</p>
-                            <p class="p-color-orange">licaloveskacaang@email.com</p>
+                            <h5>NAME</h5>
+                            <h6>Lica</h6> <br>
+                            <h5>EMAIL</h5>
+                            <h6>licaloveskacaang@email.com</h6>
                         </div>
                         <div class="col-md-6">
-                            <p class="p-20-px-color-orange">ADDRESS</p>
-                            <p class="p-color-orange">
+                            <h5 class="p-20-px-color-orange">ADDRESS</h5>
+                            <h6 class="p-color-orange">
                                 BLK 655 BUKIT PANJANG RING ROAD<br>
                                 #14-76<br>
                                 SINGAPORE 687655<br>
                                 SINGAPORE
-                            </p>
+                            </h6>
                         </div>
                     </div>
                     <br>
@@ -117,38 +117,37 @@
             <!-- past orders tab -->
             <div id="pastorders" class="tabacctcontent">
                 <div class="acctrect">
-                    <p class="p-20-px-color-orange">You haven't placed any orders yet.</p> <br>
-                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop
-                            Now</a></button>
+                    <h6>You haven't placed any orders yet.</h6> <br>
+                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop Now</a></button>
                 </div>
             </div>
             <!-- rewards tab -->
             <div id="rewards" class="tabacctcontent">
                 <div class="acctrect">
-                    <div class="row">
-                        <div class="col-md-3 aligncenter">
+                    <div class="row aligncenter">
+                        <div class="col-md-3 reedemable">
                             <img class="imgacct" src="images/free-delivery.png">
-                            <p class="p-color-orange">Free Delivery</p>
-                            <p class="p-12-px-color-orange">150 points</p>
-                            <button class="actionbutton-smaller">Redeem</button>
+                            <h6>Free Delivery</h6>
+                            <p>150 points</p>
+                            <button class="actionbutton">Redeem</button>
                         </div>
-                        <div class="col-md-3 aligncenter">
+                        <div class="col-md-3 unreedemable">
                             <img class="imgacct" src="images/two-dollars-off.png">
-                            <p class="p-color-orange">$2 OFF next order</p>
-                            <p class="p-12-px-color-orange">350 points</p>
-                            <button class="actionbutton-neutral">More points needed</button>
+                            <h6>$2 OFF</h6>
+                            <p>350 points</p>
+                            <button class="actionbutton">More points needed</button>
                         </div>
-                        <div class="col-md-3 aligncenter">
+                        <div class="col-md-3 unreedemable">
                             <img class="imgacct" src="images/five-dollars-off.png">
-                            <p class="p-color-orange">$5 OFF next order</p>
-                            <p class="p-12-px-color-orange">600 points</p>
-                            <button class="actionbutton-neutral">More points needed</button>
+                            <h6>$5 OFF</h6>
+                            <p>600 points</p>
+                            <button class="actionbutton">More points needed</button>
                         </div>
-                        <div class="col-md-3 aligncenter">
+                        <div class="col-md-3 unreedemable">
                             <img class="imgacct" src="images/ten-dollars-off.png">
-                            <p class="p-color-orange">$10 OFF next order</p>
-                            <p class="p-12-px-color-orange">1000 points</p>
-                            <button class="actionbutton-neutral">More points needed</button>
+                            <h6>$10 OFF</h6>
+                            <p>1000 points</p>
+                            <button class="actionbutton">More points needed</button>
                         </div>
                     </div>
                 </div>
@@ -156,15 +155,15 @@
             <!-- points history tab -->
             <div id="pointshistory" class="tabacctcontent">
                 <div class="acctrect-right">
-                    <p class="p-20-px-color-orange">November 2023</p> <br>
-                    <button class="actionbutton-100-orange">
+                    <h6 class="dark-brown-font">November 2023</h6> <br>
+                    <button class="actionbutton">
                         <div class="row">
                             <div class="col-md-6">
-                                <p>Welcome Points!</p>
-                                <p class="p-12px">11 November 2023</p>
+                                <h6>Welcome Points!</h6>
+                                <p>11 November 2023</p>
                             </div>
                             <div class="col-md-6">
-                                <p class="alignright">+150</p>
+                                <h6 class="alignright">+150</h6>
                             </div>
                         </div>
                     </button>
